--- a/FrogFu/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/FrogFu/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -105,6 +105,40 @@ LastExecutedPIEPreviewDevice=
 DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
 
+[/Script/UnrealEd.LevelEditorViewportSettings]
+FlightCameraControlExperimentalNavigation=False
+MinimumOrthographicZoom=250.000000
+bAllowArcballRotate=False
+bAllowScreenRotate=False
+bShowActorEditorContext=True
+bAllowEditWidgetAxisDisplay=True
+bUseLegacyCameraMovementNotifications=False
+SnapToSurface=(bEnabled=False,SnapOffsetExtent=0.000000,bSnapRotation=True)
+bEnableLayerSnap=False
+ActiveSnapLayerIndex=0
+PreserveNonUniformScale=True
+PreviewMeshes=/Engine/EditorMeshes/ColorCalibrator/SM_ColorCalibrator.SM_ColorCalibrator
+BillboardScale=1.000000
+TransformWidgetSizeAdjustment=0
+bSaveEngineStats=False
+MeasuringToolUnits=MeasureUnits_Centimeters
+SelectedSplinePointSizeAdjustment=0.000000
+SplineLineThicknessAdjustment=0.000000
+SplineTangentHandleSizeAdjustment=0.000000
+SplineTangentScale=0.500000
+LastInViewportMenuLocation=(X=0.000000,Y=0.000000)
+MaterialForDroppedTextures=None
+MaterialParamsForDroppedTextures=()
+EditorViews=(("/Game/TopDown/Maps/TopDownMap.TopDownMap", (LevelViewportsInfo=((CamPosition=(X=-1451.076388,Y=1622.899564,Z=1885.507597),CamOrthoZoom=60847.566406),(CamPosition=(X=-1451.076388,Y=1622.899564,Z=1885.507597),CamOrthoZoom=60847.566406),(CamPosition=(X=-1451.076388,Y=1622.899564,Z=1885.507597),CamOrthoZoom=60847.566406),(CamPosition=(X=-678.872727,Y=1539.931428,Z=1916.099592),CamRotation=(Pitch=-42.599900,Yaw=-1.000000,Roll=0.000000)),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True)))))
+PropertyColorationColorForMatchingObjects=(B=0,G=0,R=255,A=255)
+
+[MRU]
+MRUItem0=/Game/TopDown/Maps/TopDownMap
+
+[ContentBrowser]
+ContentBrowserTab1.SelectedPaths=/Game/TopDown/Maps
+ContentBrowserTab1.PluginFilters=
+
 [EditorStartup]
 LastLevel=/Game/TopDown/Maps/TopDownMap
 
@@ -112,8 +146,44 @@ LastLevel=/Game/TopDown/Maps/TopDownMap
 WorldPartitionRuntimeHashSet="\"Object\" "
 WorldPartitionRuntimeHash="\"Object\" "
 Object="\"Object\" "
+StaticMeshActor="\"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance\" "
 
 [AssetEditorSubsystem]
 CleanShutdown=False
 DebuggerAttached=False
+
+[DetailCategories]
+StaticMeshActor.TransformCommon=True
+StaticMeshActor.StaticMesh=True
+StaticMeshActor.Materials=True
+StaticMeshActor.Physics=True
+StaticMeshActor.Collision=True
+StaticMeshActor.Lighting=True
+StaticMeshActor.Rendering=True
+StaticMeshActor.Mesh Painting=True
+StaticMeshActor.HLOD=True
+StaticMeshActor.Navigation=True
+StaticMeshActor.VirtualTexture=True
+StaticMeshActor.Tags=True
+StaticMeshActor.Cooking=True
+StaticMeshActor.Replication=True
+StaticMeshActor.Networking=True
+StaticMeshActor.Actor=True
+
+[/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
+bHideEditorDataLayers=False
+bHideRuntimeDataLayers=False
+bHideDataLayerActors=True
+bHideUnloadedActors=False
+bShowOnlySelectedActors=False
+bHighlightSelectedDataLayers=True
+bHideLevelInstanceContent=True
+bDisableLoadingOfLastLoadedRegions=False
+bBugItGoLoadRegion=False
+bShowCellCoords=False
+MinimapUnloadedOpacity=0.660000
+PerWorldEditorSettings=(("/Game/TopDown/Maps/TopDownMap.TopDownMap", ()))
+
+[AssetEditorSubsystemRecents]
+MRUItem0=/Game/TopDown/Maps/TopDownMap
 
