--- a/FrogFu/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/FrogFu/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -129,28 +129,44 @@ SplineTangentScale=0.500000
 LastInViewportMenuLocation=(X=0.000000,Y=0.000000)
 MaterialForDroppedTextures=None
 MaterialParamsForDroppedTextures=()
-EditorViews=(("/Game/TopDown/Maps/TopDownMap.TopDownMap", (LevelViewportsInfo=((CamPosition=(X=-1451.076388,Y=1622.899564,Z=1885.507597),CamOrthoZoom=60847.566406),(CamPosition=(X=-1451.076388,Y=1622.899564,Z=1885.507597),CamOrthoZoom=60847.566406),(CamPosition=(X=-1451.076388,Y=1622.899564,Z=1885.507597),CamOrthoZoom=60847.566406),(CamPosition=(X=-678.872727,Y=1539.931428,Z=1916.099592),CamRotation=(Pitch=-42.599900,Yaw=-1.000000,Roll=0.000000)),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True)))))
+EditorViews=(("/Game/TopDown/Maps/TopDownMap.TopDownMap", (LevelViewportsInfo=((CamPosition=(X=-1451.076388,Y=1622.899564,Z=1885.507597),CamOrthoZoom=60847.566406),(CamPosition=(X=-1451.076388,Y=1622.899564,Z=1885.507597),CamOrthoZoom=60847.566406),(CamPosition=(X=-1451.076388,Y=1622.899564,Z=1885.507597),CamOrthoZoom=60847.566406),(CamPosition=(X=-678.872727,Y=1539.931428,Z=1916.099592),CamRotation=(Pitch=-37.799900,Yaw=-0.400000,Roll=0.000000)),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True)))),("/Game/TopDown/Maps/TestGroundsNelio.TestGroundsNelio", (LevelViewportsInfo=((CamPosition=(X=-1451.076388,Y=1622.899564,Z=1885.507597),CamOrthoZoom=60847.566406),(CamPosition=(X=-1451.076388,Y=1622.899564,Z=1885.507597),CamOrthoZoom=60847.566406),(CamPosition=(X=-1451.076388,Y=1622.899564,Z=1885.507597),CamOrthoZoom=60847.566406),(CamPosition=(X=-570.048536,Y=1248.937988,Z=1248.643084),CamRotation=(Pitch=-35.000001,Yaw=-2.400000,Roll=0.000000)),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True),(CamUpdated=True)))))
 PropertyColorationColorForMatchingObjects=(B=0,G=0,R=255,A=255)
 
 [MRU]
-MRUItem0=/Game/TopDown/Maps/TopDownMap
+MRUItem0=/Game/TopDown/Maps/TestGroundsNelio
+MRUItem1=/Game/TopDown/Maps/TopDownMap
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game/TopDown/Maps
+ContentBrowserTab1.SelectedPaths=/Game/TopDown/Input
 ContentBrowserTab1.PluginFilters=
 
 [EditorStartup]
-LastLevel=/Game/TopDown/Maps/TopDownMap
+LastLevel=/Game/TopDown/Maps/TestGroundsNelio
 
 [DetailPropertyExpansion]
 WorldPartitionRuntimeHashSet="\"Object\" "
 WorldPartitionRuntimeHash="\"Object\" "
 Object="\"Object\" "
 StaticMeshActor="\"Object.StaticMeshActor.StaticMeshComponent.Object.Collision.BodyInstance\" "
+SkeletalMeshComponent="\"Object\" "
+SkinnedMeshComponent="\"Object\" "
+MeshComponent="\"Object\" "
+PrimitiveComponent="\"Object\" "
+SceneComponent="\"Object\" "
+ActorComponent="\"Object\" "
+InputAction="\"Object\" "
+DataAsset="\"Object\" "
+InputMappingContext="\"Object\" "
 
 [AssetEditorSubsystem]
 CleanShutdown=False
 DebuggerAttached=False
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=
+RecentAssetEditors=
+OpenAssetsAtExit=/Game/TopDown/Blueprints/BP_TopDownCharacter.BP_TopDownCharacter
+OpenAssetsAtExit=/Game/TopDown/Input/IMC_Default.IMC_Default
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -169,6 +185,75 @@ StaticMeshActor.Cooking=True
 StaticMeshActor.Replication=True
 StaticMeshActor.Networking=True
 StaticMeshActor.Actor=True
+BP_TopDownCharacter_C.TransformCommon=True
+BP_TopDownCharacter_C.Animation=True
+BP_TopDownCharacter_C.Mesh=True
+BP_TopDownCharacter_C.Camera=True
+BP_TopDownCharacter_C.Tick=True
+BP_TopDownCharacter_C.ComponentTick=True
+BP_TopDownCharacter_C.Clothing=True
+BP_TopDownCharacter_C.Physics=True
+BP_TopDownCharacter_C.LeaderPoseComponent=True
+BP_TopDownCharacter_C.Collision=True
+BP_TopDownCharacter_C.Lighting=True
+BP_TopDownCharacter_C.AnimationRig=True
+BP_TopDownCharacter_C.Deformer=True
+BP_TopDownCharacter_C.SkinWeights=True
+BP_TopDownCharacter_C.Rendering=True
+BP_TopDownCharacter_C.HLOD=True
+BP_TopDownCharacter_C.Mobile=True
+BP_TopDownCharacter_C.Navigation=True
+BP_TopDownCharacter_C.RayTracing=True
+BP_TopDownCharacter_C.VirtualTexture=True
+BP_TopDownCharacter_C.Tags=True
+BP_TopDownCharacter_C.AssetUserData=True
+BP_TopDownCharacter_C.Replication=True
+BP_TopDownCharacter_C.ComponentReplication=True
+BP_TopDownCharacter_C.Activation=True
+BP_TopDownCharacter_C.Variable=True
+BP_TopDownCharacter_C.Cooking=True
+BP_TopDownCharacter_C.Character Movement (General Settings)=True
+BP_TopDownCharacter_C.Character Movement: Walking=True
+BP_TopDownCharacter_C.Character Movement: Jumping / Falling=True
+BP_TopDownCharacter_C.Character Movement: Gravity=True
+BP_TopDownCharacter_C.Character Movement (Networking)=True
+BP_TopDownCharacter_C.Character Movement: Swimming=True
+BP_TopDownCharacter_C.Character Movement: Flying=True
+BP_TopDownCharacter_C.Character Movement: Custom Movement=True
+BP_TopDownCharacter_C.Character Movement (Rotation Settings)=True
+BP_TopDownCharacter_C.Character Movement: Physics Interaction=True
+BP_TopDownCharacter_C.Character Movement=True
+BP_TopDownCharacter_C.Character Movement: Avoidance=True
+BP_TopDownCharacter_C.RootMotion=True
+BP_TopDownCharacter_C.Character Movement: NavMesh Movement=True
+BP_TopDownCharacter_C.NavMovement=True
+BP_TopDownCharacter_C.Velocity=True
+BP_TopDownCharacter_C.PlanarMovement=True
+BP_TopDownCharacter_C.MovementComponent=True
+BP_TopDownCharacter_C.Shape=True
+BP_TopDownCharacter_C.Character=True
+BP_TopDownCharacter_C.Pawn=True
+BP_TopDownCharacter_C.Actor=True
+BP_TopDownCharacter_C.Input=True
+BP_TopDownCharacter_C.Events=True
+BP_TopDownCharacter_C.Materials=True
+BP_TopDownController_C.Input=True
+BP_TopDownController_C.Tick=True
+BP_TopDownController_C.PlayerController=True
+BP_TopDownController_C.Cheat Manager=True
+BP_TopDownController_C.MouseInterface=True
+BP_TopDownController_C.Game=True
+BP_TopDownController_C.WorldPartition=True
+BP_TopDownController_C.Controller=True
+BP_TopDownController_C.Replication=True
+BP_TopDownController_C.Actor=True
+BP_TopDownController_C.HLOD=True
+BP_TopDownController_C.Physics=True
+BP_TopDownController_C.Events=True
+InputAction.Description=True
+InputAction.Action=True
+InputAction.Input Consumption=True
+InputAction.User Settings=True
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -182,8 +267,68 @@ bDisableLoadingOfLastLoadedRegions=False
 bBugItGoLoadRegion=False
 bShowCellCoords=False
 MinimapUnloadedOpacity=0.660000
-PerWorldEditorSettings=(("/Game/TopDown/Maps/TopDownMap.TopDownMap", ()))
+PerWorldEditorSettings=(("/Game/TopDown/Maps/TopDownMap.TopDownMap", ()),("/Game/TopDown/Maps/TestGroundsNelio.TestGroundsNelio", ()))
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/TopDown/Maps/TopDownMap
+MRUItem0=/Game/TopDown/Input/IMC_Default
+MRUItem1=/Game/TopDown/Blueprints/BP_TopDownController
+MRUItem2=/Game/TopDown/Blueprints/BP_TopDownCharacter
+MRUItem3=/Game/TopDown/Maps/TestGroundsNelio
+MRUItem4=/Game/TopDown/Maps/TopDownMap
+
+[AssetEditorToolkitTabLocation]
+/Game/TopDown/Input/Actions/IA_SetDestination_Click.IA_SetDestination_Click=0
+/Game/TopDown/Blueprints/BP_TopDownController.BP_TopDownController=0
+
+[/Script/BlueprintGraph.BlueprintEditorSettings]
+bDrawMidpointArrowsInBlueprints=False
+bShowGraphInstructionText=True
+bHideUnrelatedNodes=False
+bShowShortTooltips=True
+bShowFunctionParameterIcon=True
+bShowFunctionLocalVariableIcon=True
+bEnableInputTriggerSupportWarnings=False
+bSplitContextTargetSettings=True
+bExposeAllMemberComponentFunctions=True
+bShowContextualFavorites=False
+bExposeDeprecatedFunctions=False
+bCompactCallOnMemberNodes=False
+bFlattenFavoritesMenus=True
+bAutoCastObjectConnections=False
+bShowViewportOnSimulate=False
+bSpawnDefaultBlueprintNodes=True
+bHideConstructionScriptComponentsInDetailsView=True
+bHostFindInBlueprintsInGlobalTab=True
+bNavigateToNativeFunctionsFromCallNodes=True
+bDoubleClickNavigatesToParent=True
+bEnableTypePromotion=True
+TypePromotionPinDenyList=string
+TypePromotionPinDenyList=text
+BreakpointReloadMethod=RestoreAll
+bEnablePinValueInspectionTooltips=True
+bEnableNamespaceEditorFeatures=True
+bEnableContextMenuTimeSlicing=True
+ContextMenuTimeSlicingThresholdMs=50
+bIncludeActionsForSelectedAssetsInContextMenu=False
+bLimitAssetActionBindingToSingleSelectionOnly=False
+bLoadSelectedAssetsForContextMenuActionBinding=True
+bDoNotMarkAllInstancesDirtyOnDefaultValueChange=True
+bFavorPureCastNodes=False
+SaveOnCompile=SoC_Never
+bJumpToNodeErrors=False
+bAllowExplicitImpureNodeDisabling=False
+bShowActionMenuItemSignatures=False
+bBlueprintNodeUniqueNames=False
+NodeTemplateCacheCapMB=20.000000
+AllowIndexAllBlueprints=LoadOnly
+bShowInheritedVariables=False
+bAlwaysShowInterfacesInOverrides=True
+bShowParentClassInOverrides=True
+bShowEmptySections=True
+bShowAccessSpecifier=False
+Bookmarks=()
+PerBlueprintSettings=()
+bIncludeCommentNodesInBookmarksTab=True
+bShowBookmarksForCurrentDocumentOnlyInTab=False
+GraphEditorQuickJumps=()
 
