--- a/FrogFu/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/FrogFu/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -136,9 +136,16 @@ PropertyColorationColorForMatchingObjects=(B=0,G=0,R=255,A=255)
 MRUItem0=/Game/TopDown/Maps/TestGroundsNelio
 MRUItem1=/Game/TopDown/Maps/TopDownMap
 
+[DetailCustomWidgetExpansion]
+InputMappingContext=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/TopDown/Input/Actions/IA_Move.IA_Move
+InputAction=InputMappingContext.Mappings.ActionMappings,InputMappingContext.Mappings.ActionMappings./Game/TopDown/Input/Actions/IA_Move.IA_Move
+
 [ContentBrowser]
 ContentBrowserTab1.SelectedPaths=/Game/TopDown/Input
 ContentBrowserTab1.PluginFilters=
+AssetPropertyPicker.ThumbnailSize=2
+AssetPropertyPicker.CurrentViewType=0
+AssetPropertyPicker.ZoomScale=0
 
 [EditorStartup]
 LastLevel=/Game/TopDown/Maps/TestGroundsNelio
@@ -156,17 +163,17 @@ SceneComponent="\"Object\" "
 ActorComponent="\"Object\" "
 InputAction="\"Object\" "
 DataAsset="\"Object\" "
-InputMappingContext="\"Object\" "
+InputMappingContext="\"Object\" \"Object.Mappings.Mappings.Mappings[0]\" \"Object.Mappings.Mappings.Mappings[0].Modifiers\" \"Object.Mappings.Mappings.Mappings[1]\" \"Object.Mappings.Mappings.Mappings[1].Modifiers\" \"Object.Mappings.Mappings.Mappings[2]\" \"Object.Mappings.Mappings.Mappings[2].Modifiers\" \"Object.Mappings.Mappings.Mappings[3]\" \"Object.Mappings.Mappings.Mappings[4]\" \"Object.Mappings.Mappings.Mappings[5]\" \"Object.Mappings.Mappings.Mappings[5].Modifiers\" \"Object.Mappings.Mappings.Mappings[6]\" \"Object.Mappings.Mappings.Mappings[6].Triggers\" \"Object.Mappings.Mappings.Mappings[6].Modifiers\" \"Object.Mappings.Mappings.Mappings[7]\" \"Object.Mappings.Mappings.Mappings[7].Modifiers\" \"Object.Mappings.Mappings.Mappings[8]\" "
 
 [AssetEditorSubsystem]
 CleanShutdown=False
 DebuggerAttached=False
+RecentAssetEditors=GenericAssetEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=
 RecentAssetEditors=
 OpenAssetsAtExit=/Game/TopDown/Blueprints/BP_TopDownCharacter.BP_TopDownCharacter
-OpenAssetsAtExit=/Game/TopDown/Input/IMC_Default.IMC_Default
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -254,6 +261,8 @@ InputAction.Description=True
 InputAction.Action=True
 InputAction.Input Consumption=True
 InputAction.User Settings=True
+InputMappingContext.Mappings=True
+InputMappingContext.Description=True
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -279,6 +288,7 @@ MRUItem4=/Game/TopDown/Maps/TopDownMap
 [AssetEditorToolkitTabLocation]
 /Game/TopDown/Input/Actions/IA_SetDestination_Click.IA_SetDestination_Click=0
 /Game/TopDown/Blueprints/BP_TopDownController.BP_TopDownController=0
+/Game/TopDown/Input/IMC_Default.IMC_Default=0
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
