--- a/FrogFu/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/FrogFu/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -71,7 +71,7 @@ PlayInEditorSoundQualityLevel=0
 bUseNonRealtimeAudioDevice=False
 bPreferToStreamLevelsInPIE=False
 bPromoteOutputLogWarningsDuringPIE=False
-NewWindowPosition=(X=-1,Y=-1)
+NewWindowPosition=(X=640,Y=336)
 PIEAlwaysOnTop=False
 DisableStandaloneSound=False
 AdditionalLaunchParameters=
@@ -98,12 +98,13 @@ bHMDForPrimaryProcessOnly=True
 AdditionalServerLaunchParameters=
 ServerFixedFPS=0
 NetworkEmulationSettings=(bIsNetworkEmulationEnabled=False,EmulationTarget=Server,CurrentProfile="Custom",OutPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0),InPackets=(MinLatency=0,MaxLatency=0,PacketLossPercentage=0))
-LastSize=(X=0,Y=0)
+LastSize=(X=1280,Y=720)
 LastExecutedLaunchDevice=Windows@RIG
 LastExecutedLaunchName=RIG
 LastExecutedPIEPreviewDevice=
 DeviceToEmulate=
 PIESafeZoneOverride=(Left=0.000000,Top=0.000000,Right=0.000000,Bottom=0.000000)
+MultipleInstancePositions=(X=640,Y=336)
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
 FlightCameraControlExperimentalNavigation=False
@@ -164,16 +165,23 @@ ActorComponent="\"Object\" "
 InputAction="\"Object\" "
 DataAsset="\"Object\" "
 InputMappingContext="\"Object\" \"Object.Mappings.Mappings.Mappings[0]\" \"Object.Mappings.Mappings.Mappings[0].Modifiers\" \"Object.Mappings.Mappings.Mappings[1]\" \"Object.Mappings.Mappings.Mappings[1].Modifiers\" \"Object.Mappings.Mappings.Mappings[2]\" \"Object.Mappings.Mappings.Mappings[2].Modifiers\" \"Object.Mappings.Mappings.Mappings[3]\" \"Object.Mappings.Mappings.Mappings[4]\" \"Object.Mappings.Mappings.Mappings[5]\" \"Object.Mappings.Mappings.Mappings[5].Modifiers\" \"Object.Mappings.Mappings.Mappings[6]\" \"Object.Mappings.Mappings.Mappings[6].Triggers\" \"Object.Mappings.Mappings.Mappings[6].Modifiers\" \"Object.Mappings.Mappings.Mappings[7]\" \"Object.Mappings.Mappings.Mappings[7].Modifiers\" \"Object.Mappings.Mappings.Mappings[8]\" "
+EdGraphNode_Comment="\"Object\" "
+EdGraphNode="\"Object\" "
+CapsuleComponent="\"Object\" "
+ShapeComponent="\"Object\" "
 
 [AssetEditorSubsystem]
 CleanShutdown=False
 DebuggerAttached=False
-RecentAssetEditors=GenericAssetEditor
 RecentAssetEditors=BlueprintEditor
+RecentAssetEditors=GenericAssetEditor
+RecentAssetEditors=GenericAssetEditor
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=
 RecentAssetEditors=
 OpenAssetsAtExit=/Game/TopDown/Blueprints/BP_TopDownCharacter.BP_TopDownCharacter
+OpenAssetsAtExit=/Game/TopDown/Blueprints/BP_TopDownGameMode.BP_TopDownGameMode
+OpenAssetsAtExit=/Game/TopDown/Input/IMC_Default.IMC_Default
 
 [DetailCategories]
 StaticMeshActor.TransformCommon=True
@@ -263,6 +271,32 @@ InputAction.Input Consumption=True
 InputAction.User Settings=True
 InputMappingContext.Mappings=True
 InputMappingContext.Description=True
+EdGraphNode_Comment.GraphNodeDetail=True
+EdGraphNode_Comment.Comment=True
+BP_TopDownGameMode_C.Tick=True
+BP_TopDownGameMode_C.Classes=True
+BP_TopDownGameMode_C.Game=True
+BP_TopDownGameMode_C.GameMode=True
+BP_TopDownGameMode_C.Physics=True
+BP_TopDownGameMode_C.Events=True
+PlayerStart.TransformCommon=True
+PlayerStart.Object=True
+PlayerStart.Rendering=True
+PlayerStart.Replication=True
+PlayerStart.HLOD=True
+PlayerStart.Physics=True
+PlayerStart.Networking=True
+PlayerStart.Input=True
+PlayerStart.Actor=True
+CapsuleComponent.TransformCommon=True
+CapsuleComponent.Shape=True
+CapsuleComponent.Navigation=True
+CapsuleComponent.HLOD=True
+CapsuleComponent.Physics=True
+CapsuleComponent.Collision=True
+CapsuleComponent.Rendering=True
+CapsuleComponent.Tags=True
+CapsuleComponent.Cooking=True
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -280,15 +314,17 @@ PerWorldEditorSettings=(("/Game/TopDown/Maps/TopDownMap.TopDownMap", ()),("/Game
 
 [AssetEditorSubsystemRecents]
 MRUItem0=/Game/TopDown/Input/IMC_Default
-MRUItem1=/Game/TopDown/Blueprints/BP_TopDownController
-MRUItem2=/Game/TopDown/Blueprints/BP_TopDownCharacter
-MRUItem3=/Game/TopDown/Maps/TestGroundsNelio
-MRUItem4=/Game/TopDown/Maps/TopDownMap
+MRUItem1=/Game/TopDown/Blueprints/BP_TopDownGameMode
+MRUItem2=/Game/TopDown/Input/Actions/IA_Move
+MRUItem3=/Game/TopDown/Blueprints/BP_TopDownCharacter
+MRUItem4=/Game/TopDown/Maps/TestGroundsNelio
+MRUItem5=/Game/TopDown/Maps/TopDownMap
 
 [AssetEditorToolkitTabLocation]
 /Game/TopDown/Input/Actions/IA_SetDestination_Click.IA_SetDestination_Click=0
 /Game/TopDown/Blueprints/BP_TopDownController.BP_TopDownController=0
 /Game/TopDown/Input/IMC_Default.IMC_Default=0
+/Game/TopDown/Input/Actions/IA_Move.IA_Move=0
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
@@ -341,4 +377,10 @@ PerBlueprintSettings=()
 bIncludeCommentNodesInBookmarksTab=True
 bShowBookmarksForCurrentDocumentOnlyInTab=False
 GraphEditorQuickJumps=()
+
+[MessageLog]
+LastLogListing=BlueprintLog
+
+[DetailCategoriesAdvanced]
+PlayerStart.Actor=False
 
