--- a/FrogFu/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/FrogFu/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -189,7 +189,7 @@ Primitive=False
 Special Effects=False
 Synth=False
 Uncategorized=False
-User Created=False
+User Created=True
 Advanced=False
 
 [DetailCustomWidgetExpansion]
@@ -344,6 +344,10 @@ WmfMediaSettings=GameMapsSettings.DefaultModes.SelectedGameModeDetails,EnhancedI
 SkyAtmosphere=PostProcessVolume.Lens.Lens
 Blueprint=Blueprint.Interfaces.Implemented Interfaces
 EdGraph=Blueprint.Interfaces.Implemented Interfaces
+WBP_Menu_Main_C=Blueprint.Interfaces.Implemented Interfaces
+PropertyWrapper=
+K2Node_VariableGet=Blueprint.Interfaces.Implemented Interfaces
+WBP_Component_Button_Default_C=
 
 [ContentBrowser]
 ContentBrowserTab1.SelectedPaths=/Game/Maps/Nelio
@@ -351,7 +355,7 @@ ContentBrowserTab1.PluginFilters=
 AssetPropertyPicker.ThumbnailSize=2
 AssetPropertyPicker.CurrentViewType=0
 AssetPropertyPicker.ZoomScale=0
-ContentBrowserDrawer.SelectedPaths=/Game/UI/Components/Menu
+ContentBrowserDrawer.SelectedPaths=/Game/UI/Components
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.SourcesExpanded=True
 ContentBrowserDrawer.IsLocked=False
@@ -373,26 +377,27 @@ ContentBrowserDrawer.ExpandedCollections=
 ContentBrowserDrawer.ThumbnailSize=2
 ContentBrowserDrawer.CurrentViewType=1
 ContentBrowserDrawer.ZoomScale=0
-ContentBrowserDrawer.JumpMRU=/All/Game/Maps/Vincent
+ContentBrowserDrawer.JumpMRU=/All/Game/UI/Components
 ContentBrowserDrawer.JumpMRU=/All/Game/UI/Components/Menu
-ContentBrowserDrawer.JumpMRU=/All/Game/TopDown
+ContentBrowserDrawer.JumpMRU=/All/Game/UI
 ContentBrowserDrawer.JumpMRU=/All/Game/Core
+ContentBrowserDrawer.JumpMRU=/All/Game/Cursor
+ContentBrowserDrawer.JumpMRU=/All/Game/LevelPrototyping
+ContentBrowserDrawer.JumpMRU=/All/Game/Maps
+ContentBrowserDrawer.JumpMRU=/All/Game/UI/Components/ScreenMessages
+ContentBrowserDrawer.JumpMRU=/All/Game/Maps/Vincent
+ContentBrowserDrawer.JumpMRU=/All/Game/TopDown
 ContentBrowserDrawer.JumpMRU=/All/Game
 ContentBrowserDrawer.JumpMRU=/All/Game/Maps/Nelio
-ContentBrowserDrawer.JumpMRU=/All/Game/Maps
 ContentBrowserDrawer.JumpMRU=/All/Game/Maps/Onno
-ContentBrowserDrawer.JumpMRU=/All/Game/UI/Components
-ContentBrowserDrawer.JumpMRU=/All/Game/UI
 ContentBrowserDrawer.JumpMRU=/All
 ContentBrowserDrawer.JumpMRU=/All/Game/UI/Menu
 ContentBrowserDrawer.JumpMRU=/All/Game/UI/Gameplay
 ContentBrowserDrawer.JumpMRU=/All/Game/TopDown/Input/UI
 ContentBrowserDrawer.JumpMRU=/All/Game/Assets
 ContentBrowserDrawer.JumpMRU=/All/Game/Characters
-ContentBrowserDrawer.JumpMRU=/All/Game/Cursor
 ContentBrowserDrawer.JumpMRU=/All/Game/TopDown/Input
 ContentBrowserDrawer.JumpMRU=/All/Game/TopDown/Blueprints
-ContentBrowserDrawer.JumpMRU=/All/Game/LevelPrototyping
 ContentBrowserDrawer.JumpMRU=
 ContentBrowserDrawer.JumpMRU=/All/Game/Maps/Nelio/Core
 ContentBrowserDrawer.JumpMRU=/All/Game/Maps/Nelio/NewFolder
@@ -402,7 +407,6 @@ ContentBrowserDrawer.JumpMRU=/All/Game/Characters/Mannequin_UE4/Textures
 ContentBrowserDrawer.JumpMRU=/All/Game/Characters/Mannequin_UE4/Materials
 ContentBrowserDrawer.JumpMRU=/All/Game/Characters/Mannequin_UE4/Animations
 ContentBrowserDrawer.JumpMRU=/All/Game/Characters/Mannequin_UE4/Rigs
-ContentBrowserDrawer.JumpMRU=/All/Game/Characters/Mannequins/Animations
 ContentBrowserTab1.SourcesExpanded=True
 ContentBrowserTab1.IsLocked=False
 ContentBrowserTab1.FavoritesAreaExpanded=False
@@ -498,7 +502,7 @@ InputAction="\"Object\" "
 DataAsset="\"Object\" "
 InputMappingContext="\"Object\" \"Object.Mappings.Mappings.Mappings[0]\" \"Object.Mappings.Mappings.Mappings[1]\" "
 EdGraphNode_Comment="\"Object\" "
-EdGraphNode="\"Object\" \"Object.PinOptions.PinNames\" "
+EdGraphNode="\"Object\" "
 CapsuleComponent="\"Object\" "
 ShapeComponent="\"Object\" "
 PostProcessVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
@@ -675,8 +679,8 @@ Enum="\"Object\" "
 Field="\"Object\" "
 CanvasPanel="\"Object\" "
 PanelWidget="\"Object\" "
-Widget="\"Object\" \"Object.Appearance.Brush\" \"Object.Appearance.Brush.ImageSize\" \"Object.Layout.Slot.Object.Layout.Layout|Canvas Slot.LayoutData.Alignment\" "
-Visual="\"Object\" \"Object.Appearance.Brush\" \"Object.Appearance.Brush.ImageSize\" \"Object.Layout.Slot.Object.Layout.Layout|Canvas Slot.LayoutData.Alignment\" "
+Widget="\"Object\" "
+Visual="\"Object\" "
 TextBlock="\"Object\" \"Object.Appearance.Font\" "
 TextLayoutWidget="\"Object\" \"Object.Appearance.Font\" "
 WBP_MainHUDWidget_C="\"Object\" "
@@ -696,10 +700,16 @@ SizeBox="\"Object\" "
 K2Node_SwitchString="\"Object\" \"Object.PinOptions.PinNames\" "
 K2Node_Switch="\"Object\" \"Object.PinOptions.PinNames\" "
 K2Node="\"Object\" \"Object.PinOptions.PinNames\" "
+Button="\"Object\" "
+WBP_Component_Button_Default_C="\"Object\" "
+VerticalBox="\"Object\" "
+WBP_Menu_Main_C="\"Object\" "
 
 [AssetEditorSubsystem]
 CleanShutdown=False
 DebuggerAttached=False
+RecentAssetEditors=WidgetBlueprintEditor
+RecentAssetEditors=WidgetBlueprintEditor
 RecentAssetEditors=
 RecentAssetEditors=BlueprintEditor
 RecentAssetEditors=BlueprintEditor
@@ -1695,6 +1705,50 @@ K2Node_CallFunction.Outputs=True
 Border.Layout=True
 BP_FrogFu_GameMode_C.Data=True
 K2Node_SwitchString.PinOptions=True
+Button.Layout=True
+Button.Appearance=True
+Button.Interaction=True
+Button.Accessibility=True
+Button.Behavior=True
+Button.Render Transform=True
+Button.Performance=True
+Button.Rendering=True
+Button.Navigation=True
+Button.Localization=True
+Button.Events=True
+VerticalBox.Layout=True
+VerticalBox.Behavior=True
+VerticalBox.Accessibility=True
+VerticalBox.Render Transform=True
+VerticalBox.Performance=True
+VerticalBox.Rendering=True
+VerticalBox.Navigation=True
+VerticalBox.Localization=True
+WBP_Component_Button_Default_C.Layout=True
+WBP_Component_Button_Default_C.Settings=True
+WBP_Component_Button_Default_C.Appearance=True
+WBP_Component_Button_Default_C.Accessibility=True
+WBP_Component_Button_Default_C.Input=True
+WBP_Component_Button_Default_C.Interaction=True
+WBP_Component_Button_Default_C.Performance=True
+WBP_Component_Button_Default_C.Behavior=True
+WBP_Component_Button_Default_C.Render Transform=True
+WBP_Component_Button_Default_C.Rendering=True
+WBP_Component_Button_Default_C.Navigation=True
+WBP_Component_Button_Default_C.Localization=True
+WBP_Component_Button_Default_C.Events=True
+WBP_Menu_Main_C.Appearance=True
+WBP_Menu_Main_C.Input=True
+WBP_Menu_Main_C.Interaction=True
+WBP_Menu_Main_C.Designer=True
+WBP_Menu_Main_C.Performance=True
+WBP_Menu_Main_C.Layout=True
+WBP_Menu_Main_C.Behavior=True
+WBP_Menu_Main_C.Render Transform=True
+WBP_Menu_Main_C.Localization=True
+WBP_Menu_Main_C.Accessibility=True
+WBP_Menu_Main_C.Rendering=True
+WBP_Menu_Main_C.Navigation=True
 
 [/Script/Engine.WorldPartitionEditorPerProjectUserSettings]
 bHideEditorDataLayers=False
@@ -1711,30 +1765,31 @@ MinimapUnloadedOpacity=0.660000
 PerWorldEditorSettings=(("/Game/TopDown/Maps/TopDownMap.TopDownMap", ()),("/Game/TopDown/Maps/TestGroundsNelio.TestGroundsNelio", ()),("/Game/Maps/Nelio/TestGroundsNelio.TestGroundsNelio", ()))
 
 [AssetEditorSubsystemRecents]
-MRUItem0=/Game/UI/Components/Menu/WBP_Menu_Main
-MRUItem1=/Game/UI/Components/Menu/MainMenu
-MRUItem2=/Game/Core/BP_FrogFu_GameMode
-MRUItem3=/Game/Core/BP_GameMode_MainMenu
-MRUItem4=/Game/UI/Components/Menu/WBP_Menu_Pause
-MRUItem5=/Game/UI/Components/Menu/Enum_AvailableMenus
-MRUItem6=/Game/Core/BPI_GameMode_new
-MRUItem7=/Game/Core/BPI_HUD
-MRUItem8=/Game/Core/BP_FrogFU_HUD
-MRUItem9=/Game/UI/Components/Gameplay/WBP_MainHUDWidget
-MRUItem10=/Game/UI/Components/ScreenMessages/WBP_ScreenMessage_TextOnly
-MRUItem11=/Game/UI/Components/ScreenMessages/WBP_ScreenMessage_IconAndText
-MRUItem12=/Game/UI/Components/ScreenMessages/Enum_MessageType
-MRUItem13=/Game/TopDown/Blueprints/BP_TopDownCharacter
-MRUItem14=/Game/TopDown/Input/UI/IM_UIInputs
-MRUItem15=/Game/TopDown/Input/UI/IA_PauseMenu
-MRUItem16=/Game/Maps/Onno/BP_SimpleAI
-MRUItem17=/Game/Maps/Onno/Main_Onno
-MRUItem18=/Game/TopDown/Blueprints/BP_Heal
-MRUItem19=/Game/TopDown/Blueprints/BP_Instance
-MRUItem20=/Game/Maps/Nelio/TestGroundsNelio
-MRUItem21=/Game/TopDown/Input/IMC_Default
-MRUItem22=/Game/TopDown/Input/Actions/IA_Punch
-MRUItem23=/Game/TopDown/Input/Actions/IA_Move
+MRUItem0=/Game/UI/Components/WBP_Component_Button_Default
+MRUItem1=/Game/UI/Components/Menu/WBP_Menu_Main
+MRUItem2=/Game/UI/Components/Menu/MainMenu
+MRUItem3=/Game/Core/BP_FrogFu_GameMode
+MRUItem4=/Game/Core/BP_GameMode_MainMenu
+MRUItem5=/Game/UI/Components/Menu/WBP_Menu_Pause
+MRUItem6=/Game/UI/Components/Menu/Enum_AvailableMenus
+MRUItem7=/Game/Core/BPI_GameMode_new
+MRUItem8=/Game/Core/BPI_HUD
+MRUItem9=/Game/Core/BP_FrogFU_HUD
+MRUItem10=/Game/UI/Components/Gameplay/WBP_MainHUDWidget
+MRUItem11=/Game/UI/Components/ScreenMessages/WBP_ScreenMessage_TextOnly
+MRUItem12=/Game/UI/Components/ScreenMessages/WBP_ScreenMessage_IconAndText
+MRUItem13=/Game/UI/Components/ScreenMessages/Enum_MessageType
+MRUItem14=/Game/TopDown/Blueprints/BP_TopDownCharacter
+MRUItem15=/Game/TopDown/Input/UI/IM_UIInputs
+MRUItem16=/Game/TopDown/Input/UI/IA_PauseMenu
+MRUItem17=/Game/Maps/Onno/BP_SimpleAI
+MRUItem18=/Game/Maps/Onno/Main_Onno
+MRUItem19=/Game/TopDown/Blueprints/BP_Heal
+MRUItem20=/Game/TopDown/Blueprints/BP_Instance
+MRUItem21=/Game/Maps/Nelio/TestGroundsNelio
+MRUItem22=/Game/TopDown/Input/IMC_Default
+MRUItem23=/Game/TopDown/Input/Actions/IA_Punch
+MRUItem24=/Game/TopDown/Input/Actions/IA_Move
 
 [AssetEditorToolkitTabLocation]
 /Game/TopDown/Input/Actions/IA_SetDestination_Click.IA_SetDestination_Click=0
@@ -1764,6 +1819,7 @@ MRUItem23=/Game/TopDown/Input/Actions/IA_Move
 /Game/UI/Components/Gameplay/WBP_MainHUDWidget.WBP_MainHUDWidget=0
 /Game/UI/Components/Menu/Enum_AvailableMenus.Enum_AvailableMenus=0
 /Game/UI/Components/Menu/WBP_Menu_Pause.WBP_Menu_Pause=0
+/Game/UI/Components/WBP_Component_Button_Default.WBP_Component_Button_Default=0
 
 [/Script/BlueprintGraph.BlueprintEditorSettings]
 bDrawMidpointArrowsInBlueprints=False
